# andsoft

./: .gitignore
c/asml/: Makefile  brownianmotionwithdrift.cpp  brownianmotionwithdrift.h  distribution.cpp  distribution.h  dummy.cpp  fastexp.cpp  fastexp.h  fourierpricing.cpp  fourierpricing.h  generator.cpp  generator.h  heston.cpp  heston.h  hypermatrix.cpp  hypermatrix.h  implied.cpp  implied.h  linear.cpp  linear.h  numerics.cpp  pde.cpp  pde.h  projection.cpp  projection.h  utils.cpp  utils.h
c/chat/: Makefile  Makefile.in  chat.glade  config.cache
c/cvs/: aclocal.m4  config.h  config.status  configure  configure.in  mkinstalldirs
c/cvs/src/: Makefile  Makefile.am  about.c  about.h  client_win.c  launch.c  launch.h  main_win.c
c/divx/: Makefile  ccvt.h  dec.cpp  dec.h  divx.cpp  divx.h  divx.pro  divx_asi.h  enc.cpp  enc.h  screen.cpp  screen.h
c/finance/: Makefile  cycle.h  foo.cpp  foo.pro  matrix.cpp  matrix.h  mersenne.cpp  mersenne.h  montecarlo.cpp  montecarlo.h  normal.h  random.cpp  random.h  timer.cpp  timer.h  utils.cpp  utils.h
c/horizon/: Makefile  horizon.cpp  horizon.h  horizon.pro
c/n2g/: Makefile  n2g.h  n2g.h.head
c/netmonitor/: Makefile  netmonitor.cpp  netmonitor.h  netmonitor.pro
c/ooASML/: ASIMarketData.cpp  ASIMaths.cpp  ASIMaths.h  ASIMaths.idl  ASIMaths_impl.cpp  ASIMaths_impl.h  Cache.cpp  Cache.h  ConversionIn.cpp  ConversionIn.h  ConversionOut.cpp  ConversionOut.h  Makefile  conversion.cpp  conversion.h  dummy.cpp  ooutils.cpp  ooutils.h
c/payoff/: AmericanLookback.cpp  (+11 more)
haskell/: hymalaia.hs  pan.hs  payoff.hs
(+217 files in other folders)
